--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Hello World</title>
+<meta charset="utf-8">
+<title>菜鸟教程(runoob.com)</title>
 </head>
-    <script src="https://www.kkkk1000.com/js/pixi4.8.2.js"></script>
 <body>
-  <script type="text/javascript">
-    let type = "WebGL"
-    if(!PIXI.utils.isWebGLSupported()){
-      type = "canvas"
-    }
-
-    PIXI.utils.sayHello(type)
-  </script>
+    <h1>我的第一个标题</h1>
+    <p>我的第一个段落。</p>
 </body>
 </html>
